# poker-game-with-ai

./: NewDealer.py  NewPlayer.py  Newgame.py  README.md  TODO.txt  balls.py  dealer.py  game.py  main.py  player.py  temp.py  test.py  testdealer.py  trythis.py  visuals.py
cpp_src/: CMakeLists.txt  Card.cpp  Card.h  Dealer.cpp  Dealer.h  Game.cpp  Game.h  Notes.txt  Player.cpp  Player.h  helperfunctions.cpp  helperfunctions.h  main.cpp
cpp_version/: card.h  main  main.cpp
old/: NewDealer.py  Newgame.py
older_version/: README.md  cards.py  main.py
python_src/: cards.py  game.py  main.py  notes.txt  player.py  visuals.py
version/: LICENSE  dealer.py  player.py
working_up_to_solver/: kuhnpoker.py  lastlastmain.py  lastmain.py  main.py  main2.py  main_kuhn.py  notes_on_regret_matching.txt  redo.py  rewrite.py
